--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ importFrom(ggplot2,scale_color_continuous)
 importFrom(ggplot2,scale_color_manual)
 importFrom(ggplot2,scale_colour_gradient2)
 importFrom(ggplot2,scale_fill_continuous)
+importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,scale_shape_identity)
 importFrom(ggplot2,scale_size_manual)
 importFrom(ggplot2,theme)
@@ -68,7 +69,6 @@ importFrom(ggraph,ggraph)
 importFrom(ggrepel,geom_text_repel)
 importFrom(igraph,E)
 importFrom(igraph,V)
-importFrom(jsonlite,fromJSON)
 importFrom(magrittr,"%>%")
 importFrom(plyr,ldply)
 importFrom(plyr,llply)
@@ -78,7 +78,6 @@ importFrom(sjmisc,is_empty)
 importFrom(stats,aggregate)
 importFrom(stats,anova)
 importFrom(stats,lm)
-importFrom(stats,na.omit)
 importFrom(stats,p.adjust)
 importFrom(stats,phyper)
 importFrom(stats,t.test)
@@ -87,6 +86,4 @@ importFrom(tidygraph,as_tbl_graph)
 importFrom(tidygraph,pull)
 importFrom(tidyr,uncount)
 importFrom(tidyr,unnest_wider)
-importFrom(utils,URLencode)
 importFrom(utils,data)
-importFrom(utils,read.csv)
